tests/golden/type_errors/generic_explicit_non_generic.cd
fun identity(value: number): number { return value; }
print identity<number>(1);
