tests/golden/type_errors/generic_explicit_non_generic.err
Type error at 2:25: function is not generic
  print identity<number>(1);
                          ^
